RVC/src/RVC/parser/RVCParser.java
/* Generated By:JavaCC: Do not edit this line. RVCParser.java */
package RVCParser.parser;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.HashSet;
import java.io.*;

public class RVCParser implements RVCParserConstants {
  public static RVCParser parse(String input) {
    Reader reader = new StringReader(input);
          RVCParser rvcParser = new RVCParser(reader);

          rvcParser.events = new HashMap<String, String>();
          rvcParser.handlers = new HashMap<String, String>();

    try{
      rvcParser.Start();
    }
         catch(ParseException e){
      System.err.println(e.getMessage());
         }
         catch(TokenMgrError e){
      System.err.println(e.getMessage());
         }
         return rvcParser;
  }

  private String specName;
  //Domain is event name, range is body
  private HashMap<String, String> events;
  //Domain is category, range is body
  private HashMap<String, String> handlers;
  private String formalism;
  private String formula;

  public HashMap<String, String> getEvents (){
          return events;
  }

  public HashMap<String, String> getHandlers () {
          return handlers;
  }

  public String getFormalism () {
          return formalism;
  }

  public String getFormula () {
          return formula;
  }

  private String parseFormula () {
    return "";
  }

  private String parseCodeBlock () {
    return "";
  }

  final public void Start() throws ParseException {
  Token formalismToken;
  Token specNameToken;
    spaceNameRoken = jj_consume_token(ID);
                         specName = specNameToken.image;
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      Event();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EVENT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    formalismToken = jj_consume_token(ID);
     formalism = formalismToken.image;
    jj_consume_token(9);
      formula = parseFormula();
    label_2:
    while (true) {
      Handler();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(RBRACE);
    jj_consume_token(0);
  }

  final public void Event() throws ParseException {
  Token token;
  String code;
    jj_consume_token(EVENT);
    token = jj_consume_token(ID);
    jj_consume_token(LBRACE);
      code = parseCodeBlock();
    jj_consume_token(RBRACE);
    events.put(token.image,code);
  }

  final public void Handler() throws ParseException {
  Token token;
  String code;
    jj_consume_token(AT);
    token = jj_consume_token(ID);
    jj_consume_token(LBRACE);
      code = parseCodeBlock();
    jj_consume_token(RBRACE);
    events.put(token.image,code);
  }

  /** Generated Token Manager. */
  public RVCParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,0x10,};
   }

  /** Constructor with InputStream. */
  public RVCParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public RVCParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RVCParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public RVCParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RVCParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public RVCParser(RVCParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RVCParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[10];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 10; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
